[package]
name = "lol_alloc"
description = "lol_alloc: A laughably simple wasm global_allocator."
readme = "../README.md"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/Craig-Macomber/lol_alloc"
license = "MIT"
categories = ["memory-management", "web-programming", "no-std", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"