[package]
name = "lol_alloc"
description = "lol_alloc: A laughably simple wasm global_allocator."
readme = "../README.md"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/Craig-Macomber/lol_alloc"
license = "MIT"
categories = ["memory-management", "web-programming", "no-std", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
rand_pcg = "0.3.1"
rand_core = "0.6.3"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
